--- a/css/index.css
+++ b/css/index.css
@@ -3,14 +3,21 @@
   padding: 0;
   margin: 0;
 }
+.header{
+  width: 100%;
+  height: auto;
+  background: green;
+  padding-bottom: 30px
+}
 .navigation{
   width: 100%;
   height: auto;
-  background: transparent;
+  background-color: transparent;
   padding: 15px 30px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 20px;
+  z-index: 2;
 }
 .nav{
   width: 100%;
@@ -53,8 +60,32 @@
 }
 
 /* body */
-.header{
+.banner{
   width: 100%;
-  height: 90vh;
-  background: green;
+  height: 80vh;
+  background-color: purple;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-flow: wrap;
+}
+.banner-img{
+  width: 53%;
+  height: 100%;
+  background-color: blue;
+  float: right;
+}
+.banner-tagline{
+  width: 45%;
+  height: 100%;
+  background-color: yellow;
+}
+/* responsive */
+@media screen and (max-width:1010px){
+  .banner-img{
+    display: none;
+  }
+  .banner-tagline{
+    width: 100%;
+  }
 }
