--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@
   padding: 15px 30px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
-  font-size: 20px;
+  /* font-size: 20px; */
   z-index: 2;
 }
 .nav{
@@ -31,9 +31,7 @@
   color: black;
   height: 100%;
   display: block;
-  /* font-family: 'Roboto', sans-serif;
-  font-weight: 500; */
-  /* background-color: purple; */
+  font-size: 25px;
 
 }
 
