--- a/css/index.css
+++ b/css/index.css
@@ -78,6 +78,13 @@
   height: 100%;
   background-color: yellow;
 }
+
+.opt{
+  padding: 5px;
+  height: auto;
+  width: 100px;
+
+}
 /* responsive */
 @media screen and (max-width:1010px){
   .banner-img{
